@@ -1,3 +1,15 @@
+2015-04-24  Jer Noble  <jer.noble@apple.com>
+
+        [WK2] Only issue a isPlayingAudioDidChange() notification if the audio playing state actually changed.
+        https://bugs.webkit.org/show_bug.cgi?id=144153
+
+        Reviewed by Alexey Proskuryakov.
+
+        Check the old state vs. the new state and only issue the change notification if the IsPlayingAudio state changed.
+
+        * UIProcess/WebPageProxy.cpp:
+        (WebKit::WebPageProxy::isPlayingMediaDidChange):
+
 2015-04-24  Antti Koivisto  <antti@apple.com>
 
         CrashTracer: [USER] com.apple.WebKit.Networking at com.apple.WebKit: WebKit::NetworkResourceLoader::~NetworkResourceLoader + 14
